Add: more options for endpoint configuration

--- a/DigiShow/resources/main.qrc
+++ b/DigiShow/resources/main.qrc
@@ -90,5 +90,6 @@
         <file>MwInterfaceListViewHue.qml</file>
         <file>MwInterfaceListViewScreen.qml</file>
         <file>MwInterfaceListViewPipe.qml</file>
+        <file>MwEndpointMoreOptions.qml</file>
     </qresource>
 </RCC>
