Update: more options for endpoint configuration [20201010]

--- a/DigiShow/resources/main.qrc
+++ b/DigiShow/resources/main.qrc
@@ -22,6 +22,7 @@
         <file>images/icon_signal_binary_white.png</file>
         <file>images/icon_signal_code_white.png</file>
         <file>images/icon_signal_note_white.png</file>
+        <file>images/icon_settings_white.png</file>
         <file>images/icon_arrow_left_white.png</file>
         <file>images/icon_arrow_right_white.png</file>
         <file>images/icon_arrow_up_white.png</file>
