Add: fullscreen button on screen player

--- a/DigiShow/resources/main.qrc
+++ b/DigiShow/resources/main.qrc
@@ -28,6 +28,8 @@
         <file>images/icon_arrow_up_white.png</file>
         <file>images/icon_arrow_down_white.png</file>
         <file>images/icon_arrow_updown_white.png</file>
+        <file>images/icon_fullscreen_enter_white.png</file>
+        <file>images/icon_fullscreen_exit_white.png</file>
         <file>images/icon_invert_white.png</file>
         <file>images/icon_interface_dmx_white.png</file>
         <file>images/icon_interface_hue_white.png</file>
