Add: something ready for experimental aplay and mplay interfaces

--- a/DigiShow/resources/main.qrc
+++ b/DigiShow/resources/main.qrc
@@ -37,6 +37,8 @@
         <file>images/icon_interface_modbus_white.png</file>
         <file>images/icon_interface_rioc_white.png</file>
         <file>images/icon_interface_screen_white.png</file>
+        <file>images/icon_interface_aplay_white.png</file>
+        <file>images/icon_interface_mplay_white.png</file>
         <file>images/icon_interface_pipe_white.png</file>
         <file>images/icon_interface_launch_white.png</file>
         <file>images/icon_interface_dmx_white@2x.png</file>
@@ -45,6 +47,8 @@
         <file>images/icon_interface_modbus_white@2x.png</file>
         <file>images/icon_interface_rioc_white@2x.png</file>
         <file>images/icon_interface_screen_white@2x.png</file>
+        <file>images/icon_interface_aplay_white@2x.png</file>
+        <file>images/icon_interface_mplay_white@2x.png</file>
         <file>images/icon_interface_pipe_white@2x.png</file>
         <file>images/icon_interface_launch_white@2x.png</file>
         <file>images/AHDSR.png</file>
@@ -82,6 +86,8 @@
         <file>MwEndpointSelectorRioc.qml</file>
         <file>MwEndpointSelectorHue.qml</file>
         <file>MwEndpointSelectorScreen.qml</file>
+        <file>MwEndpointSelectorAPlay.qml</file>
+        <file>MwEndpointSelectorMPlay.qml</file>
         <file>MwEndpointSelectorPipe.qml</file>
         <file>MwEndpointSelectorLaunch.qml</file>
         <file>MwSlotOptionsView.qml</file>
