--- a/DigiShow/resources/main.qrc
+++ b/DigiShow/resources/main.qrc
@@ -112,6 +112,7 @@
         <file>MwInterfaceListViewPipe.qml</file>
         <file>MwEndpointMoreOptions.qml</file>
         <file>MwColorPickerDialog.qml</file>
+        <file>MwUndoManager.qml</file>
         <file>Splash.qml</file>
     </qresource>
 </RCC>
