Add: slot bookmarks

--- a/DigiShow/resources/main.qrc
+++ b/DigiShow/resources/main.qrc
@@ -33,6 +33,7 @@
         <file>images/icon_fullscreen_enter_white.png</file>
         <file>images/icon_fullscreen_exit_white.png</file>
         <file>images/icon_invert_white.png</file>
+        <file>images/icon_goto_white.png</file>
         <file>images/icon_interface_dmx_white.png</file>
         <file>images/icon_interface_artnet_white.png</file>
         <file>images/icon_interface_hue_white.png</file>
