Add: metronome interface

--- a/DigiShow/resources/main.qrc
+++ b/DigiShow/resources/main.qrc
@@ -49,7 +49,7 @@
         <file>images/icon_interface_pipe_white.png</file>
         <file>images/icon_interface_launch_white.png</file>
         <file>images/icon_interface_hotkey_white.png</file>
-        <file>images/icon_interface_metro_white.png</file>
+        <file>images/icon_interface_metronome_white.png</file>
         <file>images/icon_interface_dmx_white@2x.png</file>
         <file>images/icon_interface_osc_white@2x.png</file>
         <file>images/icon_interface_artnet_white@2x.png</file>
@@ -63,7 +63,7 @@
         <file>images/icon_interface_pipe_white@2x.png</file>
         <file>images/icon_interface_launch_white@2x.png</file>
         <file>images/icon_interface_hotkey_white@2x.png</file>
-        <file>images/icon_interface_metro_white@2x.png</file>
+        <file>images/icon_interface_metronome_white@2x.png</file>
         <file>images/AHDSR.png</file>
         <file>images/logo.png</file>
         <file>sounds/metro1.wav</file>
@@ -109,6 +109,7 @@
         <file>MwEndpointSelectorPipe.qml</file>
         <file>MwEndpointSelectorLaunch.qml</file>
         <file>MwEndpointSelectorHotkey.qml</file>
+        <file>MwEndpointSelectorMetronome.qml</file>
         <file>MwAboutDialog.qml</file>
         <file>MwAppOptionsDialog.qml</file>
         <file>MwInterfacesDialog.qml</file>
