--- a/DigiShow/resources/main.qrc
+++ b/DigiShow/resources/main.qrc
@@ -144,5 +144,6 @@
         <file>SpWebView.qml</file>
         <file>SpAnimationFadeIn.qml</file>
         <file>DigishowScriptable.qml</file>
+        <file>DigishowScriptableUserTemplate.qml</file>
     </qresource>
 </RCC>
