Fix: compatibility issues 240322

--- a/DigiShow/resources/main.qrc
+++ b/DigiShow/resources/main.qrc
@@ -148,6 +148,6 @@
         <file>SpWebView.qml</file>
         <file>SpAnimationFadeIn.qml</file>
         <file>DigishowScriptable.qml</file>
-        <file>DigishowScriptableUserTemplate.qml</file>
+        <file>DigishowScriptableUserTemplate.txt</file>
     </qresource>
 </RCC>
