Update: expression and scripting environment improvements Add: multi-line expression editor Add: udp sending functions for javascript Update: http request functions for javascript Update: expression and script guide

--- a/DigiShow/resources/main.qrc
+++ b/DigiShow/resources/main.qrc
@@ -38,6 +38,8 @@
         <file>images/icon_arrow_up_white.png</file>
         <file>images/icon_arrow_down_white.png</file>
         <file>images/icon_arrow_updown_white.png</file>
+        <file>images/icon_edit_one_white.png</file>
+        <file>images/icon_edit_multi_white.png</file>
         <file>images/icon_expression_white.png</file>
         <file>images/icon_fullscreen_enter_white.png</file>
         <file>images/icon_fullscreen_exit_white.png</file>
