Update: rewrote the timeline editor UI using qml

--- a/DigiShow/resources/main.qrc
+++ b/DigiShow/resources/main.qrc
@@ -157,9 +157,8 @@
         <file>SpImageView.qml</file>
         <file>SpWebView.qml</file>
         <file>SpAnimationFadeIn.qml</file>
+        <file>TimelineEditor.qml</file>
         <file>DigishowScriptable.qml</file>
         <file>DigishowScriptableUserTemplate.txt</file>
-        <file>html/timeline.html</file>
-        <file>html/timeline.js.txt</file>
     </qresource>
 </RCC>
