Add: markers support in cue player editing window

--- a/DigiShow/resources/main.qrc
+++ b/DigiShow/resources/main.qrc
@@ -17,6 +17,7 @@
         <file>images/icon_ep_in_white.png</file>
         <file>images/icon_ep_out_white.png</file>
         <file>images/icon_forward_white.png</file>
+        <file>images/icon_marker_white.png</file>
         <file>images/icon_menu_white.png</file>
         <file>images/icon_next_white.png</file>
         <file>images/icon_pause_white.png</file>
