--- a/DigiShow/resources/main.qrc
+++ b/DigiShow/resources/main.qrc
@@ -48,6 +48,8 @@
         <file>images/icon_edit_one_white.png</file>
         <file>images/icon_edit_multi_white.png</file>
         <file>images/icon_expression_white.png</file>
+        <file>images/icon_arrow_white.png</file>
+        <file>images/icon_adjust_white.png</file>
         <file>images/icon_fullscreen_enter_white.png</file>
         <file>images/icon_fullscreen_exit_white.png</file>
         <file>images/icon_invert_white.png</file>
